--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ecommerce-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/benzouynahk-beep/tp10.git",
+  "homepage":  "https://benzouynahk-beep.github.io/tp10",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
